<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="gameViewModel"
            type="com.example.guessgame.game.GameViewModel" />
    </data>

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gamebg"
        tools:context=".game.FragmentGame">

        <LinearLayout
            android:id="@+id/centeralViewID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ur_word_str_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UrWordIs"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/word_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/quote_format(gameViewModel.MWord)}"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="&quot;Tuna&quot;"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/timeCounterID_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{gameViewModel.currentTimeString}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                tools:text="0:00"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/currentScoreID_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/score_format(gameViewModel.MScore)}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                tools:text="Score: 0"
                />

        </LinearLayout>

        <!--  <com.airbnb.lottie.LottieAnimationView
              android:id="@+id/animation_view"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_above="@id/nextBtnID_game"
              android:layout_marginTop="8dp"
              app:lottie_autoPlay="true"
              android:layout_below="@id/centeralViewID"
              app:lottie_fileName="gameplay_counter.json"
              app:lottie_loop="true" />-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextBtnID_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:background="@drawable/btn_bg"
            android:text="@string/next"
            android:onClick="@{() -> gameViewModel.onCorrect()}"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/skipBtnID_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:background="@drawable/btn2_bg"
            android:text="@string/skip"
            android:onClick="@{() -> gameViewModel.onSkip()}"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</layout>